--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
-        android:layout_marginTop="57dp"
+        android:layout_marginTop="45dp"
         android:tint="@color/white"
         android:src="@drawable/logo" />
 
@@ -26,9 +26,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginTop="50dp"
-        android:background="#00ffffff"
-        android:src="@drawable/camera_btn" />
+        android:layout_marginTop="20dp"
+        android:background="#000000"
+        android:src="@drawable/camera" />
 
     <ImageButton
         android:id="@+id/Use_btn"
@@ -37,10 +37,10 @@
         android:layout_below="@+id/Camera_btn"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="5dp"
         android:layout_centerVertical="true"
-        android:background="#00ffffff"
-        android:src="@drawable/use_btn" />
+        android:background="#000000"
+        android:src="@drawable/use" />
 
 
 </RelativeLayout>
